# incresql

./: Cargo.toml  README.md  deny.toml
.cargo/: config
.github/workflows/: main.yml
benchmarking/: schema.sql  tpch.rs
benchmarking/_tpch/: incresql_runner.rs  mod.rs  mysql_runner.rs
benchmarking/docker/dbgen/: Dockerfile
src/: README.md  main.rs
src/ast/: Cargo.toml  README.md
src/ast/src/: expr.rs  lib.rs  statement.rs
src/ast/src/rel/: logical.rs  mod.rs  point_in_time.rs  statement.rs
src/catalog/: Cargo.toml  README.md
src/catalog/src/: bootstrap.rs  error.rs  lib.rs
src/data/: Cargo.toml  README.md
src/data/src/: datatype.rs  datum.rs  encoding.rs  encoding_core.rs  encoding_datum.rs  json.rs  json_serde.rs  jsonpath_utils.rs  lib.rs  session.rs  tuple_iter.rs
src/executor/: Cargo.toml  README.md
src/executor/src/: aggregate_expression.rs  expression.rs  lib.rs  scalar_expression.rs  utils.rs
src/executor/src/point_in_time/: file_scan.rs  filter.rs  hash_group.rs  hash_join.rs  limit.rs  mod.rs  negate_freq.rs  project.rs  single.rs  sort.rs  sorted_group.rs  table_insert.rs  table_scan.rs  union_all.rs  values.rs
src/functions/: Cargo.toml  README.md
src/functions/src/: jsonpath_utils.rs  lib.rs  registry.rs
src/functions/src/aggregate/: mod.rs
src/functions/src/aggregate/maths/: avg.rs  mod.rs  sum.rs
src/functions/src/aggregate/misc/: count.rs  mod.rs
src/functions/src/scalar/: mod.rs
src/functions/src/scalar/bool/: and.rs  between.rs  eq.rs  gt.rs  gte.rs  is_false.rs  is_null.rs  is_true.rs  lt.rs  lte.rs  mod.rs  ne.rs  not.rs  or.rs
src/functions/src/scalar/casts/: mod.rs  to_bigint.rs  to_bool.rs  to_date.rs  to_decimal.rs  to_int.rs  to_json.rs  to_jsonpath.rs  to_text.rs  to_timestamp.rs  type_of.rs
src/functions/src/scalar/date/: date_sub.rs  mod.rs
src/functions/src/scalar/json/: compile_jsonpath.rs  json_extract.rs  json_extract_unquote.rs  json_unquote.rs  jsonpath_utils.rs  mod.rs
src/functions/src/scalar/maths/: add.rs  divide.rs  mod.rs  multiply.rs  subtract.rs
src/functions/src/scalar/misc/: coalesce.rs  if_fn.rs  mod.rs
src/functions/src/scalar/session/: database.rs  mod.rs
src/parser/: Cargo.toml  README.md
src/parser/src/: atoms.rs  create.rs  delete.rs  drop.rs  expression.rs  insert.rs  lib.rs  literals.rs  select.rs  show.rs  statement.rs  whitespace.rs
src/planner/: Cargo.toml  README.md
src/planner/src/: common.rs  error.rs  explain.rs  lib.rs  normalize.rs  optimize.rs  point_in_time.rs  validate.rs
src/planner/src/explain/: logical.rs  mod.rs
src/planner/src/p1_validation/: check_aggregates_usage.rs  check_inserts.rs  check_predicates.rs  check_unions.rs  column_aliases.rs  compile_functions_and_refs.rs  convert_project_to_groupby.rs  expand_stars.rs  mod.rs  resolve_tables.rs  sub_in_special_vars.rs  validate_values_types.rs
src/planner/src/p2_optimization/: collapse_projects.rs  filter_pushdown.rs  fold_constants.rs  mod.rs  predicate_pushdown.rs
src/planner/src/p3_common_transforms/: mod.rs  normalize_joins.rs
src/planner/src/p3_pit_planning/: mod.rs
src/planner/src/p4_pit_planning/: mod.rs
src/planner/src/utils/: expr.rs  logical.rs  mod.rs
src/runtime/: Cargo.toml  README.md
src/runtime/src/: connection.rs  error.rs  lib.rs
src/server/: Cargo.toml  README.md
src/server/src/: lib.rs
src/server/src/mysql/: constants.rs  mod.rs  packets.rs  protocol_base.rs
src/storage/: Cargo.toml  README.md
src/storage/src/: error.rs  lib.rs  storage.rs  table.rs
test_data/csv/: simple.csv
tests/: README.md  integration_tests.rs  literals.rs  runner.rs
tests/building_blocks/: aliases.rs  between.rs  boolean_logic.rs  eq_ne.rs  limit.rs  literals.rs  mod.rs  order_by.rs  predicates.rs  star.rs  tables.rs  unions.rs
tests/casts/: mod.rs
tests/create/: database.rs  table.rs
tests/delete/: mod.rs
tests/file_sources/: mod.rs
tests/group/: mod.rs
tests/insert/: mod.rs
tests/join/: mod.rs
tests/json/: mod.rs
tests/optimize/: constant_folding.rs
tests/runner/: mod.rs
tests/show/: databases.rs  functions.rs  mod.rs  tables.rs
tests/views/: mod.rs
