[package]
name = "incresql"
version = "0.1.0"
authors = ["Tim Patterson <tim.wanaka@gmail.com>"]
edition = "2018"
publish = false
default-run = "incresql"

[workspace]
members = [
    "src/ast",
    "src/catalog",
    "src/data",
    "src/executor",
    "src/functions",
    "src/parser",
    "src/planner",
    "src/runtime",
    "src/server",
    "src/storage"
]

[dependencies]
runtime = { path = "src/runtime" }
server = { path = "src/server" }

# These are needed to support the integration tests
[dev-dependencies]
data = { path = "src/data" }

[[bin]]
name = "tpch"
path = "benchmarking/tpch.rs"

[profile.release]
debug = true
opt-level = 3
lto = "thin"
codegen-units = 1
