[package]
name = "incresql"
version = "0.1.0"
authors = ["Tim Patterson <tim.wanaka@gmail.com>"]
edition = "2018"
publish = false
default-run = "incresql"

[workspace]
members = [
    "src/ast",
    "src/catalog",
    "src/data",
    "src/executor",
    "src/functions",
    "src/parser",
    "src/planner",
    "src/runtime",
    "src/server",
    "src/storage"
]

[dependencies]
runtime = { path = "src/runtime" }
server = { path = "src/server" }
clap = "2.33.3"

# Non windows Deps
[target.'cfg(not(windows))'.dependencies]
jemallocator = { version = "0.3.2", features=["unprefixed_malloc_on_supported_platforms", "background_threads"] }

# These are needed to support the integration tests and/or benchmarking
[dev-dependencies]
data = { path = "src/data" }
mysql = "20.1.0"

[[example]]
name = "tpch"
path = "benchmarking/tpch.rs"

[profile.release]
debug = true
opt-level = 3
lto = "thin"
codegen-units = 1
