[package]
name = "data"
version = "0.1.0"
authors = ["Tim Patterson <tim.wanaka@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
regex = "1"
rust_decimal = "1.7.0"
serde = "1.0.126"
serde_json = { version="1.0", features=["arbitrary_precision"] }
nom = "6.0.0"