[package]
name = "executor"
version = "0.1.0"
authors = ["Tim Patterson <tim.wanaka@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ast = { path = "../ast" }
data = { path = "../data" }
functions = { path = "../functions" }
storage = { path = "../storage" }

[dev-dependencies]
catalog = { path = "../catalog" }