[package]
name = "planner"
version = "0.1.0"
authors = ["Tim Patterson <tim.wanaka@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ast = { path = "../ast" }
catalog = { path = "../catalog" }
data = { path = "../data" }
functions = { path = "../functions" }
# Parser needed to expand views
parser = { path = "../parser" }
storage = { path = "../storage" }
