[package]
name = "runtime"
version = "0.1.0"
authors = ["Tim Patterson <tim.wanaka@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
ast = { path = "../ast" }
data = { path = "../data" }
executor = { path = "../executor" }
functions = { path = "../functions" }
parser = { path = "../parser" }
planner = { path = "../planner" }